--- a/BaseCloud/BaseCloud/BaseCloud.csproj
+++ b/BaseCloud/BaseCloud/BaseCloud.csproj
@@ -67,6 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeDB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangeDB.Designer.cs">
+      <DependentUpon>ChangeDB.cs</DependentUpon>
+    </Compile>
     <Compile Include="designInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +154,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="soilDataTran.cs" />
+    <EmbeddedResource Include="ChangeDB.resx">
+      <DependentUpon>ChangeDB.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="designInfo.resx">
       <DependentUpon>designInfo.cs</DependentUpon>
     </EmbeddedResource>
