--- a/BaseCloud/BaseCloud/BaseCloud.csproj
+++ b/BaseCloud/BaseCloud/BaseCloud.csproj
@@ -97,6 +97,18 @@
     <Compile Include="confirm.Designer.cs">
       <DependentUpon>confirm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChangeAuthor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangeAuthor.Designer.cs">
+      <DependentUpon>ChangeAuthor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manager_author.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager_author.Designer.cs">
+      <DependentUpon>Manager_author.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager_sttc.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,7 +165,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignIn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SignIn.Designer.cs">
+      <DependentUpon>SignIn.cs</DependentUpon>
+    </Compile>
     <Compile Include="soilDataTran.cs" />
+    <EmbeddedResource Include="ChangeAuthor.resx">
+      <DependentUpon>ChangeAuthor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChangeDB.resx">
       <DependentUpon>ChangeDB.cs</DependentUpon>
     </EmbeddedResource>
@@ -181,6 +202,9 @@
     <EmbeddedResource Include="manager.resx">
       <DependentUpon>manager.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Manager_Author.resx">
+      <DependentUpon>Manager_author.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Manager_sttc.resx">
       <DependentUpon>Manager_sttc.cs</DependentUpon>
     </EmbeddedResource>
@@ -205,6 +229,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SignIn.resx">
+      <DependentUpon>SignIn.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
